# fuapi

./: .pre-commit-config.yaml  pyproject.toml
src/fuapi/: __init__.py
src/fuapi/api_clients/clients/: __init__.py  _httpx.py
src/fuapi/core/: _settings.py
